--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://blockbyblockchain.com/"
+baseurl = "https://blockbyblockchain.github.io/"
 languageCode = "en-us"
 title = "Block by Blockchain"
 theme = "hugo-creative-theme"
