--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseurl = "https://blockbyblockchain.github.io/"
-languageCode = "en-us"
+languageCode = "en"
 title = "Block by Blockchain"
 theme = "hugo-creative-theme"
 googleAnalytics = ""
