--- a/config.toml
+++ b/config.toml
@@ -99,9 +99,9 @@ publishDir = "."
 	# Contact section
 	[params.contact]
 		headline = "Get In Touch!"
-		description = "Ready to start learning about all this? Start a business based on blockchain? Start trading in cryptocurrencies? That's great! Find out about our workshop schedule or gives us a call to learn abut how we can help you."
-		phone = "123-456-6789"
-		email = "learn@blockbyblockchain.com"
+		description = "Ready to start learning about all this? Start a business based on blockchain? Start trading in cryptocurrencies? That's great! Find out about our workshop schedule or send us an email to learn abut how we can help you."
+		#phone = "123-456-6789"
+		email = "blockchain@metamodellers.com"
 
 	# Google Maps section
 	# [params.location]
